1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* common.m (tkobjc_dragAndDropTarget, dragAndDropTargetArg): Pass
	window name (%%W) to idReceive:.

	* VarProbeEntry.m ([VarProbeEntry -createEnd]): Replace call
	to getProbedType with ([getVarProbe getProbedType])[0].

	* VarProbeEntry.h (VarProbeEntry): Replace probeType with varProbe.

	* VarProbeEntry.[hm] ([VarProbeEntry -setVarProbe:]): Change accessor
	for same.  Add getVarProbe.

1998-07-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.tcl (do_package): Pass window to package:.
	(do_package_arg): Pass window to package:arg:.

	* common.m (oldSetupDragAndDrop, newSetupDragAndDrop): 
	 Pass %%W to do_package.
	 (oldSetupDragAndDropArg, newSetupDragAndDropArg): Pass %%W
	to do_package_arg.
	(tkobjc_bindButton3ToSpawn): Pass widgetName to Spawn:.
	(tkobjc_bindButton3ToArgSpawn): Pass widgetName to argSpawn:arg:.
	Focus on widget, not self.

	* VarProbeEntry.m (tkobjc_bindReturnToSetValue): Use setVariableValue:
	instead of setValue: (to discriminate different semantics of the
	two calls).

	* Entry.m ([Entry -setValue:]): Reset xview to 0 after inserting
	replacement value.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (TCLFILES): Name the Tcl files here, use in EXTRADIST.
	($(libtkobjc_la_OBJECTS)): Depend on _tcl.x files.

1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Graph.[hm] (-createElement, -destroyElement:, -setOwnerGraph:,
	+createOwnerGraph:): Change to use of an object conforming to the
	GraphElement protocol, not a statically-typed object.
	(GraphElement): Make ownerGraph an object that conforms to the
	Graph protocol instead of being statically typed.

1998-07-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-registerAndLoad]): Use it to override class and resource names
	provided by Tk.

	* internal.[hm] (tkobjc_setName): New function to set 